Add forEach and uppercase to the user input.

--- a/index.html
+++ b/index.html
@@ -30,14 +30,11 @@
           <label for="item4">item4</label>
           <input type="text" id="item4" class="form-control">
         </div>
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
       <div class="groceryList">
         <ul>
-          <li> <span id="itemOne"></span> </li>
-          <li> <span id="itemTwo"></span> </li>
-          <li> <span id="itemThree"></span> </li>
-          <li> <span id="itemFour"></span> </li>
+
         </ul>
       </div>
     </div>
